# financing-agent

./: .gitignore  Dockerfile  Dockerfile.proxy  pyproject.toml
frontend/: .env.local.example  .gitignore  README.md  package-lock.json  package.json  tailwind.config.ts
frontend/app/: globals.css  layout.tsx  page.tsx  providers.tsx
frontend/app/api/verify/: route.ts
frontend/app/debug/: page.tsx
src/financing_agent/: __main__.py  cli.py  setup.py
src/financing_api/: __init__.py  __main__.py  agent.py  app.py  config.py  ledger.py  payments.py  schemas.py  storage.py
src/financing_mcp/: __main__.py  auth.py  benchmarks.py  calculations.py  predatory.py  server.py
src/financing_proxy/: __main__.py  agent.py  app.py  auth.py  config.py  eval_worker.py  firestore.py
src/mca_analyzer/: calculations.py  predatory.py
tests/: fixtures.py  test_extraction.py  test_extraction_live.py  test_math.py  test_payments.py  test_predatory.py  test_recommendation.py  test_storage.py
