[project]
name = "financing-mcp"
version = "0.1.0"
description = "SMB financing analysis MCP server"
requires-python = ">=3.11"
dependencies = [
    "anthropic>=0.52.0",
    "mcp[cli]>=1.0.0",
    "uvicorn>=0.30.0",
    "starlette>=0.37.0",
]

[project.optional-dependencies]
proxy = [
    "fastapi>=0.110.0",
    "google-cloud-firestore>=2.16.0",
    "pydantic[email]>=2.0",
]
dev = [
    "pytest>=8.0",
    "deepeval>=2.0",
    "pytest-asyncio>=0.23",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
